[gd_scene load_steps=5 format=2]

[ext_resource path="res://texture/plot/ground_flssure/dilie_1.png" type="Texture" id=1]
[ext_resource path="res://texture/plot/ground_flssure/dilie_2.png" type="Texture" id=2]
[ext_resource path="res://texture/plot/ground_flssure/dilie_3.png" type="Texture" id=3]
[ext_resource path="res://script/plot/ground_fissure.gd" type="Script" id=4]

[node name="ground_fissure" type="Node2D"]
script = ExtResource( 4 )

[node name="dilie_1" type="Sprite" parent="."]
position = Vector2( 83.162, 0 )
texture = ExtResource( 1 )

[node name="dilie_2" type="Sprite" parent="."]
position = Vector2( 57.485, -9.581 )
texture = ExtResource( 2 )

[node name="dilie_3" type="Sprite" parent="."]
texture = ExtResource( 3 )
